--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Inova",
+  "name": "inova",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -12,7 +12,10 @@
   "dependencies": {
     "@react-native-firebase/app": "^18.5.0",
     "@react-native-firebase/auth": "^18.5.0",
+    "@react-native-firebase/firestore": "^18.5.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.14",
     "react": "18.2.0",
     "react-native": "0.72.6"
   },
