--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@react-native-firebase/auth": "^18.5.0",
     "@react-native-firebase/firestore": "^18.5.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
-    "@react-navigation/native": "^6.1.8",
-    "@react-navigation/native-stack": "^6.9.14",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.15",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-safe-area-context": "^4.7.3",
+    "react-native-screens": "^3.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
