--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@react-navigation/bottom-tabs": "^6.5.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.15",
+    "@zegocloud/zego-uikit-prebuilt-live-streaming-rn": "^2.1.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "^4.7.3",
-    "react-native-screens": "^3.26.0"
+    "react-native-screens": "^3.26.0",
+    "zego-express-engine-reactnative": "^3.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
