--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@zegocloud/zego-uikit-prebuilt-live-streaming-rn": "^2.1.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-image-picker": "^7.0.2",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.26.0",
     "zego-express-engine-reactnative": "^3.8.2"
